# dsa-reference

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
coding_questions/arrays/duplicate_zeros/: README.md  test_solution_duplicate_zeros.py
coding_questions/arrays/happy_number/: solution_01.py  test_solution_happy_number.py
coding_questions/arrays/longest_peak/: README.md  solution_01.py  test_solution_longest_peak.py
coding_questions/arrays/monotonic_array/: README.md  solution_02.py  test_solution_monotonic_array.py
coding_questions/arrays/move_element_to_end/: solution_03.py  solution_04.py  test_solution_move_element_to_end.py
coding_questions/arrays/remove_duplicates_sorted/: README.md  solution_01.py  test_solution_remove_duplicates_sorted.py
coding_questions/arrays/smallest_difference/: solution_01.py  solution_02.py  solution_03.py
coding_questions/arrays/spiral_traverse_matrix/: solution_02.py  test_solution_spiral_traverse_matrix.py
coding_questions/arrays/three_number_sum/: README.md  solution_01.py  solution_02.py  test_solution_three_number_sum.py
coding_questions/arrays/two_sum/: solution_03.py  test_solution_two_sum.py
coding_questions/arrays/two_sum_index/: README.md  test_solution_two_sum_index.py
coding_questions/arrays_and_strings/duplicate_zeros/: solution_01.py  solution_02.py  test_solution_duplicate_zeros.py
coding_questions/linked_lists/: single_linked_list.py  test_imp.py  test_single_linked_list.py
guides/: 01_problem_solving_approach.md  03_algorithmic_patterns.md
(+44 files in other folders)
