[project]
name = "dsa-reference"
version = "0.1.0"
description = "DSA learning reference"
authors = [
    {name = "Lucas Garces",email = "56943455+srgarcess@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
